--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="../css/buttons.css" />
+</head>
 <body>
 
 <p id="demo" onclick="myFunction()">Click me to run the code.</p>
 
 <script type="text/javascript" src="../src/hello.js"></script>
+
+ <a class="btn-blue" onclick="myFunction()" href="">Click me</a>
+
+ <a class="btn-orange" onclick="myFunction2()" href="">Click me</a>
 
 </body>
 </html>
