--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,14 @@
 
 <p id="demo" onclick="myFunction()">Click me to run the code.</p>
 
-<script type="text/javascript" src="../src/hello.js"></script>
+ <script type="text/javascript" src="../src/hello.js"></script>
+ <script type="text/javascript" src="../src/primes.js"></script>
 
- <a class="btn-blue" onclick="myFunction()" href="">Click me</a>
+ <a class="btn-blue" onclick="calc_primes(); return false;" href="">Click me</a>
 
- <a class="btn-orange" onclick="myFunction2()" href="">Click me</a>
+ <a class="btn-orange" onclick="myFunction2(); return false;" href="">Click me</a>
+
+  <p id="calc-primes-result">Result</p>
 
 </body>
 </html>
