--- a/html/index.html
+++ b/html/index.html
@@ -18,19 +18,45 @@
 
   <p id="timer-value">Timer</p>
 
-<button onclick="startWorker()">Start Worker</button>
-<button onclick="stopWorker()">Stop Worker</button>
+<button onclick="startPrimesGeneration()">Start Primes Generation</button>
+<button onclick="stopPrimesGeneration()">Stop Primes Generation</button>
+<script>
+var timerPrimesGeneration;
+function startPrimesGeneration() {
+  if(typeof(timerPrimesGeneration) !== "undefined") {
+    return;
+  }
+  timerPrimesGeneration = Timer.start("timer-value");
+}
+
+function stopPrimesGeneration() {
+  Timer.stop(timerPrimesGeneration);
+  timerPrimesGeneration = undefined;
+}
+</script>
 
 <script>
-// URL.createObjectURL
-window.URL = window.URL || window.webkitURL;
-var timer;
-
 class Timer {
-  constructor() {
+  static start(targetName) {
+    if(typeof(Worker) == "undefined") {
+      Timer.timerUpdate(targetName, "Sorry! No Web Worker support.");
+      return;
+    }
+    return new Timer(targetName);
+  }
+
+  static stop(x) {
+    if(typeof(x) == "undefined") {
+      return;
+    }  
+    x.minion.terminate();
+  } 
+
+  constructor(targetName) {
+    this.targetName = targetName;
     this.minion = Timer.createTimer();
     this.minion.onmessage = function(event) {
-      Timer.timerUpdate(event.data);
+      Timer.timerUpdate(targetName, event.data);
     };   
   }
 
@@ -47,40 +73,16 @@ class Timer {
       blob.append(response);
       blob = blob.getBlob();
     }
+    // URL.createObjectURL
+    window.URL = window.URL || window.webkitURL;
     return new Worker(URL.createObjectURL(blob));
   }
 
-  static timerUpdate(value) {
-    document.getElementById("timer-value").innerHTML = value;
+  static timerUpdate(name, value) {
+    document.getElementById(name).innerHTML = value;
   }
-
-  static start() {
-    if(typeof(Worker) == "undefined") {
-      Timer.timerUpdate("Sorry! No Web Worker support.");
-      return;
-    }
-    return new Timer();
-  }
-
-  static stop() {
-    timer.minion.terminate();
-  } 
 }
 
-function startWorker() {
-  if(typeof(timer) !== "undefined") {
-    return;
-  }
-  timer = Timer.start();
-}
-
-function stopWorker() {
-  if(typeof(timer) == "undefined") {
-    return;
-  }
-  Timer.stop();
-  timer = undefined;
-}
 </script>
 
 </body>
