primes reading start

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,8 @@
 
   <a class="btn-blue" onclick="dbReport(); return false;" href="">Report On DB</a> 
 
+  <a class="btn-blue" onclick="dbRead(); return false;" href="">Read DB</a> 
+
   <a class="btn-blue" onclick="dbClose(); return false;" href="">Close DB</a> 
 
   <a class="btn-orange" onclick="dbDelete(); return false;" href="">Delete DB</a>
